Add new target.