@@ -319,6 +319,20 @@ task functionalJavaTest(type: Test) {
     }
 }
 
+task functionalDegradeJavaTest(type: Test) {
+    useJUnitPlatform()
+
+    maxParallelForks = 1
+    timeout = Duration.ofMinutes(60)
+    minHeapSize = "128m" // initial heap size
+    maxHeapSize = "2048m" // maximum heap size
+    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
+
+    filter {
+        includeTestsMatching('cloud.filibuster.functional.java.degrade.*')
+    }
+}
+
 task functionalPythonTest(type: Test) {
     useJUnitPlatform()
 
